docs/api/qiskit/0.19/qiskit.providers.ibmq.AccountProvider.md
---
title: AccountProvider
description: API reference for qiskit.providers.ibmq.AccountProvider
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.providers.ibmq.AccountProvider
---

# AccountProvider

<span id="qiskit.providers.ibmq.AccountProvider" />

`AccountProvider(credentials, access_token)` [GitHub](https://github.com/qiskit/qiskit-ibmq-provider/tree/stable/0.7/qiskit/providers/ibmq/accountprovider.py "view source code")

Provider for a single IBM Quantum Experience account.

The account provider class provides access to the IBM Quantum Experience backends available to this account.

You can access a provider by enabling an account with the [`IBMQ.enable_account()`](qiskit.providers.ibmq.IBMQFactory#enable_account "qiskit.providers.ibmq.IBMQFactory.enable_account") method, which returns the default provider you have access to:

```python
from qiskit import IBMQ
provider = IBMQ.enable_account(<INSERT_IBM_QUANTUM_EXPERIENCE_TOKEN>)
```

To select a different provider, use the [`IBMQ.get_provider()`](qiskit.providers.ibmq.IBMQFactory#get_provider "qiskit.providers.ibmq.IBMQFactory.get_provider") method and specify the hub, group, or project name of the desired provider.

The [`backends()`](qiskit.providers.ibmq.AccountProvider#backends "qiskit.providers.ibmq.AccountProvider.backends") method returns all the backends available to this account:

```python
backends = provider.backends()
```

The [`get_backend()`](qiskit.providers.ibmq.AccountProvider#get_backend "qiskit.providers.ibmq.AccountProvider.get_backend") method returns a backend that matches the filters passed as argument. An example of retrieving a backend that matches a specified name:

```python
simulator_backend = provider.get_backend('ibmq_qasm_simulator')
```

It is also possible to use the `backends` attribute to reference a backend. As an example, to retrieve the same backend from the example above:

```python
simulator_backend = provider.backends.ibmq_qasm_simulator
```

<Admonition title="Note" type="note">
  The `backends` attribute can be used to autocomplete the names of backends available to this provider. To autocomplete, press `tab` after `provider.backends.`. This feature may not be available if an error occurs during backend discovery. Also note that this feature is only available in interactive sessions, such as in Jupyter Notebook and the Python interpreter.
</Admonition>

AccountProvider constructor.

**Parameters**

*   **credentials** ([`Credentials`](qiskit.providers.ibmq.credentials.Credentials "qiskit.providers.ibmq.credentials.credentials.Credentials")) – IBM Quantum Experience credentials.
*   **access\_token** (`str`) – IBM Quantum Experience access token.

## Methods

### backends

<span id="qiskit.providers.ibmq.AccountProvider.backends" />

`AccountProvider.backends(name=None, **kwargs)` [GitHub](https://github.com/qiskit/qiskit-ibmq-provider/tree/stable/0.7/qiskit/providers/ibmq/accountprovider.py "view source code")

Return all backends accessible via this provider, subject to optional filtering.

**Return type**

`List`\[[`IBMQBackend`](qiskit.providers.ibmq.IBMQBackend "qiskit.providers.ibmq.ibmqbackend.IBMQBackend")]

### get\_backend

<span id="qiskit.providers.ibmq.AccountProvider.get_backend" />

`AccountProvider.get_backend(name=None, **kwargs)`

Return a single backend matching the specified filtering.

**Parameters**

*   **name** (*str*) – name of the backend.
*   **\*\*kwargs** – dict used for filtering.

**Returns**

a backend matching the filtering.

**Return type**

[BaseBackend](qiskit.providers.BaseBackend "qiskit.providers.BaseBackend")

**Raises**

[**QiskitBackendNotFoundError**](qiskit.providers.QiskitBackendNotFoundError "qiskit.providers.QiskitBackendNotFoundError") – if no backend could be found or more than one backend matches the filtering criteria.

